<resources>
    <string name="app_name">SQLiteDemo</string>
    <string name="hint_name">pease enter name</string>
    <string name="hint_cell">please enter cell</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_show_data">Show Data</string>
    <string name="btn_edit_data">Edit Data</string>
    <string name="btn_delete_data">Delete Data</string>
    <string name="data">Data From the database will be displayed here</string>
</resources>
